WIP hero ready. Fix scroll on tablets when held in landscape

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,6 +6,8 @@
   --white: #fff;
   --brand-background: #111011;
   --black: #000;
+  --dark-text: #292927;
+  --ligth-text: #FAFAF9;
 
   --max-width: 1100px;
   --border-radius: 12px;
@@ -27,29 +29,43 @@ body {
   color: var(--white);
   background-color: var(--brand-background);
 
-  main {
-    padding: 20px;
-    padding-bottom: 40px;
-    min-height: 100vh;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
+  // main {
+  //   padding: 20px;
+  //   padding-bottom: 40px;
+  //   min-height: 100vh;
+  //   max-width: 1200px;
+  //   margin-left: auto;
+  //   margin-right: auto;
 
-    @include bp('small') {
-      padding: 40px;
-      padding-bottom: 60px;
-    }
+  //   @include bp('small') {
+  //     padding: 40px;
+  //     padding-bottom: 60px;
+  //   }
 
-    @include bp('medium') {
-      padding: 40px 80px;
-      padding-bottom: 80px;
-    }
-  }
+  //   @include bp('medium') {
+  //     padding: 40px 80px;
+  //     padding-bottom: 80px;
+  //   }
+  // }
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.hide-on-small {
+  display: none;
+
+  @include bp(large) {
+    display: block;
+  }
+}
+
+.hide-on-large {
+  @include bp(large) {
+    display: none;
+  }
 }
 
 @media (prefers-color-scheme: dark) {
